--- a/confirmation.html
+++ b/confirmation.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
 <!--  Last Published: Fri Apr 09 2021 15:13:53 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="606368239f0a7258dd0cb280" data-wf-site="6047d3daa589377e718b46ce">
+
 <head>
   <meta charset="utf-8">
   <title>confirmation</title>
@@ -12,14 +13,40 @@
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/nametagapp.webflow.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Droid Serif:400,400italic,700,700italic","Droid Sans:400,700","Noto Serif:regular,700","Karla:regular,600,700,800"]  }});</script>
+  <script type="text/javascript">
+    WebFont.load({
+      google: {
+        families: ["Droid Serif:400,400italic,700,700italic", "Droid Sans:400,700", "Noto Serif:regular,700",
+          "Karla:regular,600,700,800"
+        ]
+      }
+    });
+  </script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
-  <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
+  <script type="text/javascript">
+    ! function (o, c) {
+      var n = c.documentElement,
+        t = " w-mod-";
+      n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className +=
+        t + "touch")
+    }(window, document);
+  </script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-192864550-1"></script>
-  <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-192864550-1', {'anonymize_ip': false});</script>
+  <script type="text/javascript">
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+    gtag('config', 'UA-192864550-1', {
+      'anonymize_ip': false
+    });
+  </script>
 </head>
+
 <body class="body-3">
   <div>
     <div data-collapse="small" data-animation="over-right" data-duration="400" role="banner" class="navbar w-nav">
@@ -30,7 +57,8 @@
         <nav role="navigation" class="nav-menu w-nav-menu">
           <a href="faq.html" class="nav-link w-nav-link">FAQ</a>
           <a href="http://nametag.work#pricing-page" class="nav-link-2 w-nav-link">pricing</a>
-          <a href="http://api.nametag.work/slack/install" target="_blank" class="nav-link-2 outline w-nav-link">add to slack</a>
+          <a href="http://api.nametag.work/slack/install" target="_blank" class="nav-link-2 outline w-nav-link">add to
+            slack</a>
         </nav>
         <div class="menu-button w-nav-button">
           <div class="icon-2 w-icon-nav-menu"></div>
@@ -40,11 +68,16 @@
   </div>
   <div class="section-14">
     <div class="w-layout-grid">
-      <div id="w-node-_17b51951-8a4f-5f1a-28eb-6dd16593eee3-dd0cb280" class="text-block-32">got it, thanks!</div><img src="images/monster-6.svg" loading="lazy" id="w-node-cfb99bbc-3f9c-cc85-2a4c-a7b2dc7ae7d0-dd0cb280" alt="" class="image-29">
+      <div id="w-node-_17b51951-8a4f-5f1a-28eb-6dd16593eee3-dd0cb280" class="text-block-32">got it, thanks!</div><img
+        src="images/monster-6.svg" loading="lazy" id="w-node-cfb99bbc-3f9c-cc85-2a4c-a7b2dc7ae7d0-dd0cb280" alt=""
+        class="image-29">
     </div>
   </div>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6047d3daa589377e718b46ce" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6047d3daa589377e718b46ce"
+    type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous">
+  </script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 </body>
+
 </html>
