--- a/support.html
+++ b/support.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
 <!--  Last Published: Fri Apr 09 2021 15:13:53 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6061df4d96b978bc9506c9a9" data-wf-site="6047d3daa589377e718b46ce">
+
 <head>
   <meta charset="utf-8">
   <title>Help | nametag</title>
-  <meta content="Quality 1:1 pairings for remote team bonding. nametag matches you with people you&#x27;ve interacted with for work but don&#x27;t know well. Try it for free --&gt;" name="description">
+  <meta
+    content="Quality 1:1 pairings for remote team bonding. nametag matches you with people you&#x27;ve interacted with for work but don&#x27;t know well. Try it for free --&gt;"
+    name="description">
   <meta content="Help | nametag" property="og:title">
-  <meta content="Quality 1:1 pairings for remote team bonding. Random matching is awkward and forced. Warm intros create better connections. nametag matches you with people you&#x27;ve interacted with for work but don&#x27;t know well. Try it for free --&gt;" property="og:description">
+  <meta
+    content="Quality 1:1 pairings for remote team bonding. Random matching is awkward and forced. Warm intros create better connections. nametag matches you with people you&#x27;ve interacted with for work but don&#x27;t know well. Try it for free --&gt;"
+    property="og:description">
   <meta content="Help | nametag" property="twitter:title">
-  <meta content="Quality 1:1 pairings for remote team bonding. Random matching is awkward and forced. Warm intros create better connections. nametag matches you with people you&#x27;ve interacted with for work but don&#x27;t know well. Try it for free --&gt;" property="twitter:description">
+  <meta
+    content="Quality 1:1 pairings for remote team bonding. Random matching is awkward and forced. Warm intros create better connections. nametag matches you with people you&#x27;ve interacted with for work but don&#x27;t know well. Try it for free --&gt;"
+    property="twitter:description">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -17,14 +24,40 @@
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/nametagapp.webflow.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Droid Serif:400,400italic,700,700italic","Droid Sans:400,700","Noto Serif:regular,700","Karla:regular,600,700,800"]  }});</script>
+  <script type="text/javascript">
+    WebFont.load({
+      google: {
+        families: ["Droid Serif:400,400italic,700,700italic", "Droid Sans:400,700", "Noto Serif:regular,700",
+          "Karla:regular,600,700,800"
+        ]
+      }
+    });
+  </script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
-  <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
+  <script type="text/javascript">
+    ! function (o, c) {
+      var n = c.documentElement,
+        t = " w-mod-";
+      n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className +=
+        t + "touch")
+    }(window, document);
+  </script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-192864550-1"></script>
-  <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-192864550-1', {'anonymize_ip': false});</script>
+  <script type="text/javascript">
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+    gtag('config', 'UA-192864550-1', {
+      'anonymize_ip': false
+    });
+  </script>
 </head>
+
 <body>
   <div>
     <div data-collapse="small" data-animation="over-right" data-duration="400" role="banner" class="navbar w-nav">
@@ -35,7 +68,8 @@
         <nav role="navigation" class="nav-menu w-nav-menu">
           <a href="faq.html" class="nav-link w-nav-link">FAQ</a>
           <a href="http://nametag.work#pricing-page" class="nav-link-2 w-nav-link">pricing</a>
-          <a href="http://api.nametag.work/slack/install" target="_blank" class="nav-link-2 outline w-nav-link">add to slack</a>
+          <a href="http://api.nametag.work/slack/install" target="_blank" class="nav-link-2 outline w-nav-link">add to
+            slack</a>
         </nav>
         <div class="menu-button w-nav-button">
           <div class="icon-2 w-icon-nav-menu"></div>
@@ -44,7 +78,15 @@
     </div>
   </div>
   <div class="form-block w-form">
-    <form id="email-form" name="email-form" data-name="Email Form" redirect="www.nametag.work" data-redirect="www.nametag.work" class="form"><label class="field-label-3">contact support</label><label for="name" class="field-label">name</label><input type="text" class="text-field w-input" maxlength="256" name="name" data-name="Name" placeholder="" id="name"><label for="email" class="field-label-2">email</label><input type="email" class="text-field-2 w-input" maxlength="256" name="email" data-name="Email" placeholder="" id="email" required=""><label class="field-label-4">message</label><textarea placeholder="what&#x27;s on your mind?" maxlength="5000" id="field" name="field" data-name="Field" class="textarea w-input"></textarea><input type="submit" value="submit" data-wait="Please wait..." class="submit-button w-button"></form>
+    <form id="email-form" name="email-form" data-name="Email Form" redirect="www.nametag.work"
+      data-redirect="www.nametag.work" class="form"><label class="field-label-3">contact support</label><label
+        for="name" class="field-label">name</label><input type="text" class="text-field w-input" maxlength="256"
+        name="name" data-name="Name" placeholder="" id="name"><label for="email"
+        class="field-label-2">email</label><input type="email" class="text-field-2 w-input" maxlength="256" name="email"
+        data-name="Email" placeholder="" id="email" required=""><label class="field-label-4">message</label><textarea
+        placeholder="what&#x27;s on your mind?" maxlength="5000" id="field" name="field" data-name="Field"
+        class="textarea w-input"></textarea><input type="submit" value="submit" data-wait="Please wait..."
+        class="submit-button w-button"></form>
     <div class="w-form-done">
       <div>Thank you! Your submission has been received!</div>
       <div></div>
@@ -53,18 +95,28 @@
       <div>Oops! Something went wrong while submitting the form.</div>
     </div>
   </div>
-  <div class="section-9"><img src="images/tag-1-1.svg" loading="lazy" id="w-node-_7b3f9fe5-befd-ad81-2fe8-db626a541649-9506c9a9" alt="" class="image-24"><img src="images/tag-2.svg" loading="lazy" alt="" class="image-23"></div>
+  <div class="section-9"><img src="images/tag-1-1.svg" loading="lazy"
+      id="w-node-_7b3f9fe5-befd-ad81-2fe8-db626a541649-9506c9a9" alt="" class="image-24"><img src="images/tag-2.svg"
+      loading="lazy" alt="" class="image-23"></div>
   <div><img src="images/Rectangle-123.png" loading="lazy" alt="" class="image-25"></div>
   <div>
     <div class="w-layout-grid grid-6 footer color">
-      <a id="w-node-_9d211c0b-5f16-01a5-b69c-7c91151b3ec7-9506c9a9" href="https://www.notion.so/joinnametag/Best-practices-to-build-remote-culture-b89232fe42664682a9f5fab87a0e29bf" target="_blank" class="button-6 blog w-button">Blog</a>
-      <a id="w-node-_9d211c0b-5f16-01a5-b69c-7c91151b3ec9-9506c9a9" href="https://www.notion.so/joinnametag/nametag-Privacy-Policy-20fca902b3c44aeabd941de48f995ea8" target="_blank" class="button-6 w-button">Privacy Policy</a>
+      <a id="w-node-_9d211c0b-5f16-01a5-b69c-7c91151b3ec7-9506c9a9"
+        href="https://www.notion.so/joinnametag/Best-practices-to-build-remote-culture-b89232fe42664682a9f5fab87a0e29bf"
+        target="_blank" class="button-6 blog w-button">Blog</a>
+      <a id="w-node-_9d211c0b-5f16-01a5-b69c-7c91151b3ec9-9506c9a9"
+        href="https://www.notion.so/joinnametag/nametag-Privacy-Policy-20fca902b3c44aeabd941de48f995ea8" target="_blank"
+        class="button-6 w-button">Privacy Policy</a>
       <div id="w-node-_9d211c0b-5f16-01a5-b69c-7c91151b3ecb-9506c9a9" class="text-block-24">© 2021 nametag</div>
-      <a id="w-node-_9d211c0b-5f16-01a5-b69c-7c91151b3ecd-9506c9a9" href="support.html" aria-current="page" class="button-6 blog w-button w--current">Support</a>
+      <a id="w-node-_9d211c0b-5f16-01a5-b69c-7c91151b3ecd-9506c9a9" href="support.html" aria-current="page"
+        class="button-6 blog w-button w--current">Support</a>
     </div>
   </div>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6047d3daa589377e718b46ce" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6047d3daa589377e718b46ce"
+    type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous">
+  </script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 </body>
+
 </html>
