--- a/payment-confirmation.html
+++ b/payment-confirmation.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
 <!--  Last Published: Wed Apr 28 2021 05:39:42 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="607751bb82c3434b48e0dee7" data-wf-site="607751bb82c34317b0e0dee3">
+<html data-wf-page="6088c1eb47ad4c8ede204924" data-wf-site="607751bb82c34317b0e0dee3">
 
 <head>
   <meta charset="utf-8">
-  <title>confirmation page | nametag</title>
+  <title>payment confirmation | nametag</title>
   <meta
     content="Quality 1:1 pairings for remote team bonding. nametag matches you with people you&#x27;ve interacted with for work but don&#x27;t know well. Try it for free --&gt;"
     name="description">
-  <meta content="confirmation page | nametag" property="og:title">
+  <meta content="payment confirmation | nametag" property="og:title">
   <meta
     content="Quality 1:1 pairings for remote team bonding. nametag matches you with people you&#x27;ve interacted with for work but don&#x27;t know well. Try it for free --&gt;"
     property="og:description">
-  <meta content="confirmation page | nametag" property="twitter:title">
+  <meta content="payment confirmation | nametag" property="twitter:title">
   <meta
     content="Quality 1:1 pairings for remote team bonding. nametag matches you with people you&#x27;ve interacted with for work but don&#x27;t know well. Try it for free --&gt;"
     property="twitter:description">
@@ -79,10 +79,11 @@
     </div>
   </div>
   <div class="section-14">
-    <div class="w-layout-grid">
-      <div id="w-node-_17b51951-8a4f-5f1a-28eb-6dd16593eee3-48e0dee7" class="text-block-32">got it, thanks!</div><img
-        src="images/monster-6.svg" loading="lazy" id="w-node-cfb99bbc-3f9c-cc85-2a4c-a7b2dc7ae7d0-48e0dee7" alt=""
-        class="image-29">
+    <div class="w-layout-grid grid-15">
+      <div id="w-node-_17b51951-8a4f-5f1a-28eb-6dd16593eee3-de204924" class="text-block-32">thanks for subscribing<br>
+        to nametag!</div><img src="images/tag-2.svg" loading="lazy"
+        id="w-node-_30c43c40-9ab0-a316-49ab-a9bd025477c2-de204924" alt="" class="image-44"><img src="images/tag-1-1.svg"
+        loading="lazy" id="w-node-cfb99bbc-3f9c-cc85-2a4c-a7b2dc7ae7d0-de204924" alt="" class="image-29">
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=607751bb82c34317b0e0dee3"
