--- a/set-up-instructions.html
+++ b/set-up-instructions.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
 <!--  Last Published: Wed Apr 28 2021 05:39:42 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="607751bb82c3434b48e0dee7" data-wf-site="607751bb82c34317b0e0dee3">
+<html data-wf-page="6088d21c759e95df0b83769f" data-wf-site="607751bb82c34317b0e0dee3">
 
 <head>
   <meta charset="utf-8">
-  <title>confirmation page | nametag</title>
+  <title>Set up | nametag</title>
   <meta
     content="Quality 1:1 pairings for remote team bonding. nametag matches you with people you&#x27;ve interacted with for work but don&#x27;t know well. Try it for free --&gt;"
     name="description">
-  <meta content="confirmation page | nametag" property="og:title">
+  <meta content="Set up | nametag" property="og:title">
   <meta
     content="Quality 1:1 pairings for remote team bonding. nametag matches you with people you&#x27;ve interacted with for work but don&#x27;t know well. Try it for free --&gt;"
     property="og:description">
-  <meta content="confirmation page | nametag" property="twitter:title">
+  <meta content="Set up | nametag" property="twitter:title">
   <meta
     content="Quality 1:1 pairings for remote team bonding. nametag matches you with people you&#x27;ve interacted with for work but don&#x27;t know well. Try it for free --&gt;"
     property="twitter:description">
@@ -78,12 +78,37 @@
       </div>
     </div>
   </div>
-  <div class="section-14">
-    <div class="w-layout-grid">
-      <div id="w-node-_17b51951-8a4f-5f1a-28eb-6dd16593eee3-48e0dee7" class="text-block-32">got it, thanks!</div><img
-        src="images/monster-6.svg" loading="lazy" id="w-node-cfb99bbc-3f9c-cc85-2a4c-a7b2dc7ae7d0-48e0dee7" alt=""
-        class="image-29">
+  <div class="section-19">
+    <div class="w-layout-grid grid-16">
+      <div id="w-node-_17b51951-8a4f-5f1a-28eb-6dd16593eee3-0b83769f" class="text-block-32">thanks for adding nametag!
+      </div>
+      <div id="w-node-_8125d98d-4d87-57e4-fc27-7aba2b30aaf1-0b83769f" class="text-block-41">here&#x27;s a guide for how
+        to set up the app</div>
     </div>
+  </div>
+  <div class="w-layout-grid grid-17">
+    <div id="w-node-b114eceb-5f26-6912-928a-2d37467547f2-0b83769f" class="text-a">1. click set up</div>
+    <div id="w-node-a2b3479f-7b81-fe22-7776-4234d75a71f6-0b83769f" class="text-a">2. pick a channel for nametag to get
+      users from<br><br>and decide if weekly summaries should be based on message history from all time (choose <strong
+        class="bold-text-10">since ever</strong>) or message history starting today (choose <strong
+        class="bold-text-11">since today</strong>)<br>‍<br><strong class="bold-text-12">the latter is useful if you want
+        people who already know each other to reconnect</strong></div>
+    <div id="w-node-_82f355cf-8fc0-5fd2-2b17-66d43b5c418d-0b83769f" class="text-a">3. all done! post in Slack
+      encouraging teammates to participate<br><br>link your calendar and submit a topic to get a match!<br><strong
+        class="bold-text-14">on Friday, you&#x27;ll get your first summary message.</strong><br></div><img
+      src="images/Screen-Shot-2021-04-28-at-12.43.33-AM.png" loading="lazy"
+      id="w-node-_25c8288c-341e-87b6-7f81-dece8940189a-0b83769f"
+      sizes="(max-width: 479px) 300px, (max-width: 991px) 492px, 60vw"
+      srcset="images/Screen-Shot-2021-04-28-at-12.43.33-AM.png 500w, images/Screen-Shot-2021-04-28-at-12.43.33-AM.png 800w, images/Screen-Shot-2021-04-28-at-12.43.33-AM.png 1080w, images/Screen-Shot-2021-04-28-at-12.43.33-AM.png 1600w, images/Screen-Shot-2021-04-28-at-12.43.33-AM.png 1742w"
+      alt="" class="image-46"><img src="images/Screen-Shot-2021-04-28-at-12.47.20-AM.png" loading="lazy"
+      id="w-node-c90821e0-373f-c4ea-fb26-7d7419dabb4a-0b83769f"
+      sizes="(max-width: 479px) 300px, (max-width: 991px) 492px, 60vw"
+      srcset="images/Screen-Shot-2021-04-28-at-12.47.20-AM.png 500w, images/Screen-Shot-2021-04-28-at-12.47.20-AM.png 800w, images/Screen-Shot-2021-04-28-at-12.47.20-AM.png 1080w, images/Screen-Shot-2021-04-28-at-12.47.20-AM.png 1600w, images/Screen-Shot-2021-04-28-at-12.47.20-AM.png 1626w"
+      alt="" class="image-46"><img src="images/Screen-Shot-2021-04-28-at-12.44.33-AM.png" loading="lazy"
+      id="w-node-_06dbf6ec-2702-e42a-66c0-4b599f571c93-0b83769f"
+      sizes="(max-width: 479px) 300px, (max-width: 991px) 492px, 60vw"
+      srcset="images/Screen-Shot-2021-04-28-at-12.44.33-AM.png 500w, images/Screen-Shot-2021-04-28-at-12.44.33-AM.png 800w, images/Screen-Shot-2021-04-28-at-12.44.33-AM.png 1080w, images/Screen-Shot-2021-04-28-at-12.44.33-AM.png 1368w"
+      alt="" class="image-46">
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=607751bb82c34317b0e0dee3"
     type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous">
