--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
       <div data-w-id="875ad311-c555-3f27-8bee-1d0b216abc7a"
         style="-webkit-transform:translate3d(0, 0, 0) scale3d(0.8, 0.8, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(0.8, 0.8, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(0.8, 0.8, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(0.8, 0.8, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0"
         class="share-with-team w-form">
-        <form id="email-form" name="email-form" data-name="Email Form" class="form-2">
+        <form id="email-form" name="email-form" action="https://api.nametag.work/forms/share" method="post"
+          class="form-2">
           <div class="share-with-team-hero">
             <div class="text-block-34">share with your team</div>
           </div><label class="field-label-11">your info</label>
