--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Apr 28 2021 05:39:42 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Apr 28 2021 06:50:35 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="607751bb82c34383bee0dee6" data-wf-site="607751bb82c34317b0e0dee3">
 
 <head>
@@ -33,30 +33,21 @@
   </script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
-  <!-- Google Tag Manager -->
-  <script>
-    (function (w, d, s, l, i) {
-      w[l] = w[l] || [];
-      w[l].push({
-        'gtm.start': new Date().getTime(),
-        event: 'gtm.js'
-      });
-      var f = d.getElementsByTagName(s)[0],
-        j = d.createElement(s),
-        dl = l != 'dataLayer' ? '&l=' + l : '';
-      j.async = true;
-      j.src =
-        'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-      f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-TNCLJTN');
+  <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-192864550-1"></script>
+  <script type="text/javascript">
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+    gtag('config', 'UA-192864550-1', {
+      'anonymize_ip': false
+    });
   </script>
-  <!-- End Google Tag Manager -->
 </head>
 
 <body>
-  <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TNCLJTN" height="0" width="0"
-      style="display:none;visibility:hidden"></iframe></noscript>
   <div class="utility-page-wrap">
     <div class="utility-page-content w-form">
       <h2 class="heading-4">oops! something broke</h2>
@@ -65,7 +56,7 @@
         <a href="index.html" class="button-2 color w-button">return to nametag</a>
       </div>
       <div class="section-16">
-        <a href="support.html" class="button-2 w-button">contact support</a>
+        <a href="support.html" class="button-2 a w-button">contact support</a>
       </div>
     </div><img src="images/monster-2.svg" alt="" class="image-33">
   </div>
